<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_gro">Add Grocery</string>
    <string name="hint_for_list">Enter Item Name</string>
    <string name="hint_for_number">Enter Quantity</string>
    <string name="save_button">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="qtyStr">Quantity :</string>
    <string name="itemStr">Grocery name :</string>
    <string name="dateStr">Date :</string>
    <string name="alert_pop">Are you Sure? You want to Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
