<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tile"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_gro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/groceryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tile"
                android:hint="@string/hint_for_list"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_for_number"
                android:importantForAutofill="no"
                android:inputType="text|numberDecimal" />
            <Button
                android:id="@+id/save"
                android:layout_below="@+id/groceryQty"
                android:text="@string/save_button"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>