<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="143dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@+id/yes"
                android:layout_toLeftOf="@+id/yes"
                android:paddingTop="5dp"
                android:text="@string/alert_pop"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAlert"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/no"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>